feat - adding functionality for report generation
