# service/src/main/java/br/com/sw2you/realmeet/validator/ValidatorConstants.java
@@ -14,6 +14,9 @@ public final class ValidatorConstants {
     public static final String ALLOCATION_EMPLOYEE_EMAIL = "employeeEmail";
     public static final String ALLOCATION_START_AT = "startAt";
     public static final String ALLOCATION_END_AT = "endAt";
+    public static final String DATE_FROM = "dateFrom";
+    public static final String DATE_TO = "dateTo";
+    public static final String EMAIL = "email";
     public static final String ORDER_BY = "orderBy";
 
     public static final int ALLOCATION_SUBJECT_MAX_LENGTH = 60;
@@ -29,6 +32,7 @@ public final class ValidatorConstants {
     public static final String INCONSISTENT = ".inconsistent";
     public static final String IN_THE_PAST = ".inThePast";
     public static final String EXCEEDS_DURATION = ".exceedsDuration";
+    public static final String EXCEEDS_INTERVAL = ".exceedsInterval";
     public static final String OVERLAPS = ".overlaps";
     public static final String INVALID = ".invalid";
 
